--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,8 +5,20 @@ sitemap: false
 permalink: /404.html
 ---
  
-<center><img src="/assets/images/404error.png" width="300" height="410"></center>
+<center><img src="/assets/images/404error.png" width="300" height="300"></center>
 
 
-<center> 찾을 수 없는 페이지 입니다.</center>
-<center> 요청하신 페이지가 사라졌거나, 잘못된 경로를 이용했는지 확인바랍니다.</center>
+<center>
+   찾을 수 없는 페이지 입니다.
+</center>
+
+<center>
+   요청하신 페이지가 사라졌거나, 잘못된 경로를 이용했는지 확인바랍니다.
+</center>
+
+<center>
+<div class="btn--danger">
+[홈으로 돌아가기](https://jaeg00l.github.io)
+</div>
+</center>
+[홈으로 돌아가기](https://jaeg00l.github.io){: .btn .btn--danger}
