--- a/_posts/2023-06-13-first.md
+++ b/_posts/2023-06-13-first.md
@@ -1,10 +1,33 @@
 ---
-layout: single
 title: "첫 포스팅 테스트"
 categories: coding
 tags: [BOJ, C++]
-toc: true
+# sidebar:
+#   nav: "docs"
 ---
+**primary**
+{: .notice--primary}
+**info**
+{: .notice--info}
+**warning**
+{: .notice--warning}
+**중요한 문장** .notice--danger으로 중요한 문장 나타낼 때 사용 가능!
+{: .notice--danger}
+**초록색** .notice--success
+{: .notice--success}
+
+[홈으로 돌아가기](https://jaeg00l.github.io){: .btn .btn--danger}
+
+<div class="notice--success">
+<ul>
+   공지사항입니다
+   <li>순서 1</li>
+   <li>순서 2</li>
+   <li>순서 3</li>
+   <li>순서 4</li>
+</ul>
+</div> 
+
 # 목차
 ## 세부목차
 ### 목차1
