--- a/_posts/2023-06-14-11.md
+++ b/_posts/2023-06-14-11.md
@@ -13,6 +13,7 @@ tags: [BOJ, C++]
 배열에서 dfs로 1인 그룹을 찾는다. dfs를 빠져나오면 그룹에 있는 모든 1을 다 찾은 것이므로 cnt++해주고 ans배열의 인덱스 z(테스트 횟수 변수)에 cnt를 저장시키고 다시 반복.
 
 ## 답안
+{% raw %}
 
 ```cpp
 #include <iostream>
@@ -81,3 +82,4 @@ int main() {
     return 0;
 }
 ```
+{% endraw %}
