--- a/_posts/2023-06-14-13.md
+++ b/_posts/2023-06-14-13.md
@@ -13,6 +13,7 @@ tags: [BOJ, C++]
 노드의 값은 1부터 N까지이므로 1부터 N까지 반복문에서 방문한 적이 없는 노드를 발견하면 그 노드를 dfs에 넣어 묶여있는 모든 요소를 방문하고 다시 반복문으로 돌아간다. (카운트 +1) 다시 방문한 적이 없는 노드를 발견하면 그 노드는 다른 그룹의 노드인 것.
 
 ## 답안
+{% raw %}
 
 ```cpp
 #include <iostream>
@@ -50,3 +51,4 @@ int main(void) {
    return 0;
 }
 ```
+{% endraw %}
