fabicon, subcategory, 참고 게시물 개수 수정

--- a/_posts/2023-06-14-2.md
+++ b/_posts/2023-06-14-2.md
@@ -1,10 +1,19 @@
 ---
 title: "BOJ 13549번: 숨바꼭질 3"
-categories: BOJ
-tags: [BOJ, C++]
+categories: [BOJ/DFS]
+tags: [BOJ, C++, BFS/DFS]
 # sidebar:
 #   nav: "docs"
 ---
+## 문제
+
+1697번 숨바꼭질 문제와 거의 유사하지만 차이점이 있다. 순간이동시 `x*2`위치로 이동하는 것은 동일하지만 시간이 걸리지 않는다. 
+
+## 접근
+
+시간이 걸리지 않는 순간이동(x*2)부터 큐에 푸시한다.
+
+## 답안
 
 ```cpp
 #include <iostream>
