--- a/_posts/2023-06-14-1.md
+++ b/_posts/2023-06-14-1.md
@@ -8,33 +8,22 @@ tags: [BOJ, C++]
 
 ## 문제
 
-수빈이는 동생과 숨바꼭질을 하고 있다. 수빈이는 현재 점 N(0 ≤ N ≤ 100,000)에 있고, 동생은 점 K(0 ≤ K ≤ 100,000)에 있다. 수빈이는 걷거나 순간이동을 할 수 있다. 만약, 수빈이의 위치가 X일 때 걷는다면 1초 후에 X-1 또는 X+1로 이동하게 된다. 순간이동을 하는 경우에는 1초 후에 2*X의 위치로 이동하게 된다.
+1초 후 `x-1`, `x+1`또는 `x*2` 위치로 이동할 수 있고 목표 지점에 도착하는 가장 빠른 시간을 구하는 문제.
 
-수빈이와 동생의 위치가 주어졌을 때, 수빈이가 동생을 찾을 수 있는 가장 빠른 시간이 몇 초 후인지 구하는 프로그램을 작성하시오.
+## 접근
 
-## 입력
+모든 경우의 수를 측정해야한다. 이 문제에서는 한 부분을 집중적으로 파고드는 DFS보다는 BFS가 알맞아보인다. 원소를 두 개 가지는 요소를 가지는 큐를 작성한다. 
 
-첫 번째 줄에 수빈이가 있는 위치 N과 동생이 있는 위치 K가 주어진다. N과 K는 정수이다.
+<div>
+<li>queue<pair<int, int>> q; → 원소 두 개짜리 pair 데이터를 큐에 저장</li >
+<li>q.push(make_pair(A, B)); → A에 위치, B에 걸린 시간을 저장</li>
+<li>int curr_pos = q.front().first;  → 첫 번째 요소 : 현재 위치</li>
+<li>int curr_time = q.front().second;  → 두 번째 요소 : 걸린 시간</li>
 
-## 출력
+</div>
+현재 수빈이의 위치인 5와 걸린 시간 0을 먼저 큐에 푸시하고, 모든 경우의 수를 큐에 저장시킨다. 
 
-수빈이가 동생을 찾는 가장 빠른 시간을 출력한다.
-
-## 예제 입력 1
-
-```
-5 17
-```
-
-## 예제 출력 1
-
-```
-4
-```
-
-## 힌트
-
-수빈이가 5-10-9-18-17 순으로 가면 4초만에 동생을 찾을 수 있다.
+이때, 저장하는 과정에서 첫 번째 요소(현재 위치)와 K(동생의 위치)가 같은 경우가 우리가 원하는 답이다. BFS이기 때문이다. 두 번째 요소(걸린 시간)를 출력하고 프로그램을 종료한다. 
 
 ## 답안
 
@@ -82,17 +71,3 @@ int main() {
    return 0;
 }
 ```
-
-## 해결방안
-
-queue<pair<*int*, *int*>> q; → 원소 두 개짜리 pair 데이터를 큐에 저장
-
-q.push(make_pair(A, B)); → A에 위치, B에 걸린 시간을 저장
-
-*int* curr_pos = q.front()**.first**;  *→ 첫 번째 요소 : 현재 위치*
-
-*int* curr_time = q.front()**.second**;  *→ 두 번째 요소 : 걸린 시간*
-
-현재 수빈이의 위치인 5, 걸린 시간 0을 먼저 큐에 push, 모든 경우의 수를 큐에 저장함. 
-
-저장하는 과정에서 첫 번째 요소(현재 위치)와 K(동생의 위치)가 같은 경우 두 번째 요소(걸린 시간)를 출력하고 프로그램 종료.
