카테고리 수정

--- a/_posts/2023-06-14-1.md
+++ b/_posts/2023-06-14-1.md
@@ -1,7 +1,7 @@
 ---
 title: "BOJ 1697번: 숨바꼭질"
-categories: BOJ
-tags: [BOJ, C++]
+categories: [BOJ]
+tags: [BOJ, C++, BFS/DFS]
 # sidebar:
 #   nav: "docs"
 ---
