--- a/_posts/2023-06-14-9.md
+++ b/_posts/2023-06-14-9.md
@@ -1,7 +1,7 @@
 ---
 title: "BOJ 2178번: 미로 탐색"
-categories: BOJ
-tags: [BOJ, C++]
+categories: [BOJ]
+tags: [BOJ, C++, BFS/DFS]
 # sidebar:
 #   nav: "docs"
 ---
