--- a/_posts/BOJ/2023-06-14-1.md
+++ b/_posts/BOJ/2023-06-14-1.md
@@ -1,17 +1,29 @@
 ---
-title: "BOJ 13549번: 숨바꼭질 3"
+title: "[C++] BOJ 1697번: 숨바꼭질"
 categories: [BOJ]
 tags: [BOJ, C++, BFS/DFS]
 # sidebar:
 #   nav: "docs"
 ---
+
 ## 문제
 
-1697번 숨바꼭질 문제와 거의 유사하지만 차이점이 있다. 순간이동시 `x*2`위치로 이동하는 것은 동일하지만 시간이 걸리지 않는다. 
+1초 후 `x-1`, `x+1`또는 `x*2` 위치로 이동할 수 있고 목표 지점에 도착하는 가장 빠른 시간을 구하는 문제.
 
 ## 접근
 
-시간이 걸리지 않는 순간이동(x*2)부터 큐에 푸시한다.
+모든 경우의 수를 측정해야한다. 이 문제에서는 한 부분을 집중적으로 파고드는 DFS보다는 BFS가 알맞아보인다. 원소를 두 개 가지는 요소를 가지는 큐를 작성한다. 
+
+<div>
+<li>queue<pair<int, int>> q; → 원소 두 개짜리 pair 데이터를 큐에 저장</li >
+<li>q.push(make_pair(A, B)); → A에 위치, B에 걸린 시간을 저장</li>
+<li>int curr_pos = q.front().first;  → 첫 번째 요소 : 현재 위치</li>
+<li>int curr_time = q.front().second;  → 두 번째 요소 : 걸린 시간</li>
+
+</div>
+현재 수빈이의 위치인 5와 걸린 시간 0을 먼저 큐에 푸시하고, 모든 경우의 수를 큐에 저장시킨다. 
+
+이때, 저장하는 과정에서 첫 번째 요소(현재 위치)와 K(동생의 위치)가 같은 경우가 우리가 원하는 답이다. BFS이기 때문이다. 두 번째 요소(걸린 시간)를 출력하고 프로그램을 종료한다. 
 
 ## 답안
 
@@ -35,7 +47,7 @@ int main() {
       int curr_pos = q.front().first;  // 현재 위치
       int curr_time = q.front().second;  // 걸린 시간
       q.pop();
-      
+
       if (curr_pos == K) {  // 동생 찾았을 경우
          cout << curr_time << endl;   // 출력 후 종료
          break;
