--- a/_posts/Algorithm/2023-06-14-24.md
+++ b/_posts/Algorithm/2023-06-14-24.md
@@ -1,6 +1,6 @@
 ---
 title: "[C++] 람다함수에 대해서"
-categories: Theory
+categories: Algorithm
 tags: [C++, 람다함수]
 ---
 
@@ -35,7 +35,7 @@ auto lambda = [](int a, int b) -> int { return a + b; };
 
 매개변수와 함수바디 부분은 일반적인 함수와 동일하다.
 
-- >키워드는 생략할 수 있으며 마지막으로 호출인자는 람다함수를 호출할 때 사용한다.
+> 키워드는 생략할 수 있으며 마지막으로 호출인자는 람다함수를 호출할 때 사용한다.
 
 ## 그래서 왜 람다함수를 사용하냐?
 
