--- a/_pages/404.md
+++ b/_pages/404.md
@@ -15,6 +15,9 @@ permalink: /404.html
 <center>
    요청하신 페이지가 사라졌거나, 잘못된 경로를 이용했는지 확인바랍니다.
 </center>
+
 <br><br><br><br>
 
-[홈으로 돌아가기](https://jaeg00l.github.io){: .btn .btn--danger}
+<center>
+    <a href="https://jaeg00l.github.io" style="display: block; margin: auto;" class="btn btn--danger">홈으로 돌아가기</a>
+</center>
