--- a/_posts/BOJ/2023-06-14-22.md
+++ b/_posts/BOJ/2023-06-14-22.md
@@ -6,6 +6,9 @@ tags: [BOJ, C++, 문자열]
 #   nav: "docs"
 ---
 
+{% linkpreview "https://www.acmicpc.net/problem/1764" %}{: .notice}
+<br>
+
 ## 접근
 
 듣지 못한 사람의 명단을 받고, 보지 못한 사람의 명단을 받아서 중복되는 사람 수와 이름을 출력하는 문제이다. 배열에 사람의 이름을 문자열로 받아 저장하고, 보지못한 사람의 명단을 받을 때는 이분 탐색을 통해 입력받은 사람이 앞의 배열에 존재하는지 검사하고 있으면 또다른 배열에 저장한다. 이 배열은 중복되는 사람의 명단을 담는 배열이다. 마지막으로 이 배열을 정렬하고 출력해주면 된다.
