--- a/_posts/BOJ/2023-06-14-24.md
+++ b/_posts/BOJ/2023-06-14-24.md
@@ -1,8 +1,11 @@
 ---
-title: "[C++] BOJ 1972번: 최소 힙"
+title: "[C++] BOJ 1927번: 최소 힙"
 categories: BOJ
 tags: [BOJ, C++, 자료구조, 우선순위 큐]
 ---
+
+{% linkpreview "https://www.acmicpc.net/problem/1927" %}{: .notice}
+<br>
 
 ## 문제
 
