--- a/_posts/BOJ/2023-06-14-23.md
+++ b/_posts/BOJ/2023-06-14-23.md
@@ -4,6 +4,9 @@ categories: BOJ
 tags: [BOJ, C++, 정렬]
 ---
 
+{% linkpreview "https://www.acmicpc.net/problem/1427" %}{: .notice}
+<br>
+
 ## 문제
 
 첫째 줄에 정렬하려고 하는 수 N이 주어진다. N은 1,000,000,000보다 작거나 같은 자연수이다.
