--- a/_posts/BOJ/2023-06-14-25.md
+++ b/_posts/BOJ/2023-06-14-25.md
@@ -4,6 +4,9 @@ categories: BOJ
 tags: [BOJ, C++, 자료구조, 우선순위 큐]
 ---
 
+{% linkpreview "https://www.acmicpc.net/problem/11279" %}{: .notice}
+<br>
+
 ## 문제
 
 첫째 줄에 연산의 개수 N(1 ≤ N ≤ 100,000)이 주어진다. 다음 N개의 줄에는 연산에 대한 정보를 나타내는 정수 x가 주어진다. 만약 x가 자연수라면 배열에 x라는 값을 넣는(추가하는) 연산이고, x가 0이라면 배열에서 가장 큰 값을 출력하고 그 값을 배열에서 제거하는 경우이다.
