--- a/_posts/BOJ/2023-04-20-1.md
+++ b/_posts/BOJ/2023-04-20-1.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 정렬]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/10989" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/10989" %}{: .notice}
+<br> -->
 
 ## 문제
 
