--- a/_posts/BOJ/2023-05-11-4.md
+++ b/_posts/BOJ/2023-05-11-4.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/1769" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/1769" %}{: .notice}
+<br> -->
 
 큰 수 X가 주어졌을 때, 앞에서 설명한 문제 변환의 과정을 몇 번 거쳐야 Y가 한 자리 수가 되어, X가 3의 배수인지 아닌지를 알 수 있게 될지를 구하는 프로그램을 작성하시오.
 
