--- a/_posts/BOJ/2023-05-14-5.md
+++ b/_posts/BOJ/2023-05-14-5.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, BFS/DFS]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/13549" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/13549" %}{: .notice}
+<br> -->
 
 ## 문제
 
