--- a/_posts/BOJ/2023-05-14-6.md
+++ b/_posts/BOJ/2023-05-14-6.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 브루트포스]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/2798" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/2798" %}{: .notice}
+<br> -->
 
 ## 답안
 
