--- a/_posts/BOJ/2023-05-18-7.md
+++ b/_posts/BOJ/2023-05-18-7.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, BFS/DFS]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/2667" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/2667" %}{: .notice}
+<br> -->
 
 ## 접근
 
