--- a/_posts/BOJ/2023-05-20-9.md
+++ b/_posts/BOJ/2023-05-20-9.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 정렬]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/1181" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/1181" %}{: .notice}
+<br> -->
 
 ## 접근
 
