--- a/_posts/BOJ/2023-05-26-14.md
+++ b/_posts/BOJ/2023-05-26-14.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 트리]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/1991" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/1991" %}{: .notice}
+<br> -->
 
 ## 문제
 
