--- a/_posts/BOJ/2023-06-13-20.md
+++ b/_posts/BOJ/2023-06-13-20.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 수학]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/1676" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/1676" %}{: .notice}
+<br> -->
 
 ## 접근
 
