--- a/_posts/BOJ/2023-06-14-23.md
+++ b/_posts/BOJ/2023-06-14-23.md
@@ -4,8 +4,8 @@ categories: BOJ
 tags: [BOJ, C++, 정렬]
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/1427" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/1427" %}{: .notice}
+<br> -->
 
 ## 문제
 
