--- a/_posts/BOJ/2023-04-30-2.md
+++ b/_posts/BOJ/2023-04-30-2.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 정렬]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/2750" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/2750" %}{: .notice}
+<br> -->
 
 ```cpp
 #include <iostream>
