--- a/_posts/BOJ/2023-06-06-18.md
+++ b/_posts/BOJ/2023-06-06-18.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 비트마스킹]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/11723" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/11723" %}{: .notice}
+<br> -->
 
 ## 접근
 
