--- a/_posts/BOJ/2023-06-14-21.md
+++ b/_posts/BOJ/2023-06-14-21.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 다이나믹 프로그래밍]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/1463" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/1463" %}{: .notice}
+<br> -->
 
 ## 접근
 
