--- a/_posts/BOJ/2023-06-14-25.md
+++ b/_posts/BOJ/2023-06-14-25.md
@@ -4,8 +4,8 @@ categories: BOJ
 tags: [BOJ, C++, 자료구조, 우선순위 큐]
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/11279" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/11279" %}{: .notice}
+<br> -->
 
 ## 문제
 
