--- a/_posts/BOJ/2023-06-14-26.md
+++ b/_posts/BOJ/2023-06-14-26.md
@@ -6,8 +6,8 @@ tags: [BOJ, C++, 문자열]
 #   nav: "docs"
 ---
 
-{% linkpreview "https://www.acmicpc.net/problem/5525" %}{: .notice}
-<br>
+<!-- {% linkpreview "https://www.acmicpc.net/problem/5525" %}{: .notice}
+<br> -->
 
 ## 접근
 
