--- a/_posts/C/C++/2023-06-14-1.md
+++ b/_posts/C/C++/2023-06-14-1.md
@@ -1,6 +1,6 @@
 ---
-title: "[C++] 람다함수에 대해서"
-categories: Algorithm
+title: "[C++] 람다(lambda)함수 사용법"
+categories: C/C++
 tags: [C++, 람다함수]
 ---
 
@@ -37,7 +37,7 @@ auto lambda = [](int a, int b) -> int { return a + b; };
 
 > 키워드는 생략할 수 있으며 마지막으로 호출인자는 람다함수를 호출할 때 사용한다.
 
-## 그래서 왜 람다함수를 사용하냐?
+## 그래서 왜 람다함수를 사용할까?
 
 일반적인 함수와 차이점이 람다함수를 사용하는 이유가 되겠다.
 
