--- a/_posts/BOJ/2023-05-14-5.md
+++ b/_posts/BOJ/2023-05-14-5.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 13549번: 숨바꼭질 3"
 categories: [BOJ]
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 다익스트라]
 # sidebar:
 #   nav: "docs"
 ---
