--- a/_posts/BOJ/2023-05-22-12.md
+++ b/_posts/BOJ/2023-05-22-12.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 2178번: 미로 탐색"
 categories: [BOJ]
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 그래프 이론, 그래프 탐색]
 # sidebar:
 #   nav: "docs"
 ---
