--- a/_posts/BOJ/2023-05-27-15.md
+++ b/_posts/BOJ/2023-05-27-15.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 16953번: A → B"
 categories: BOJ
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 그래프 이론, 그래프 탐색, 그리디]
 # sidebar:
 #   nav: "docs"
 ---
