--- a/_posts/C/C++/2023-06-16-2.md
+++ b/_posts/C/C++/2023-06-16-2.md
@@ -1,5 +1,5 @@
 ---
-title: "[C++ STL] &lt;set&gt;라이브러리 사용법"
+title: "[C++ STL] &lt;set&gt;라이브러리"
 categories: C/C++
 tags: [C++, STL]
 ---
@@ -19,51 +19,52 @@ tags: [C++, STL]
 
 ### 주요 함수들
 
-1. `insert(const value_type& val)`
+1. insert(const value_type& val)
     
     원소를 삽입. 동일한 원소 존재시 아무런 동작 X
+    +) `s1.insert(s2.begin(), s2.end())`으로 set끼리 병합할 수 있다.
     
-2. `erase(iterator position)`
+2. erase(iterator position)
     
     지정된 위치의 원소 삭제. 
     
-3. `erase(const value_type& val)`
+3. erase(const value_type& val)
     
     지정된 값과 일치하는 원소 삭제.
     
-4. `find(const value_type& val)`
+4. find(const value_type& val)
     
     지정된 값과 일치하는 원소를 찾아 반복자 반환. 못 찾을 경우 end() 반복자 반환.
     
-5. `count(const value_type& val)`
+5. count(const value_type& val)
     
     지정된 값과 일치하는 원소의 개수를 반환. (중복을 허락하지 않으니 항상 0 또는 1)
     
-6. `lower_bound(const value_type& val)`
+6. lower_bound(const value_type& val)
     
     지정된 값보다 같거나 큰 원소들 중 첫 번째 원소를 가리키는 반복자 반환. 못 찾을 경우 end() 반복자 반환.
     
-7. `upper_bound(const value_type& val)`
+7. upper_bound(const value_type& val)
     
     지정된 값보다 큰 원소들 중 첫 번째 원소를 가리키는 반복자 반환. 못 찾을 경우 end() 반복자 반환.
     
-8. `begin()`
+8. begin()
     
     첫 번째 원소를 가리키는 반복자 반환.
     
-9. `end()`
+9. end()
     
     마지막 원소의 다음을 가리키는 반복자 반환.
     
-10. `size()`
+10. size()
     
     현재 컨테이너에 저장된 원소의 수 반환.
     
-11. `max_size()`
+11. max_size()
     
     현재 컨테이너가 수용할 수 있는 최대 원소의 수 반환.
     
-12. `empty()`
+12. empty()
     
     비어있는지 확인. 비어있으면 true를 반환. 
     
