--- a/_posts/BOJ/2023-05-11-4.md
+++ b/_posts/BOJ/2023-05-11-4.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 1769번: 3의 배수"
 categories: BOJ
-tags: [BOJ, C++]
+tags: [BOJ, C++, 수학, 문자열]
 # sidebar:
 #   nav: "docs"
 ---
