--- a/_posts/BOJ/2023-05-18-7.md
+++ b/_posts/BOJ/2023-05-18-7.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 2667번: 단지 번호 붙이기"
 categories: BOJ
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 그래프 이론, 그래프 탐색]
 # sidebar:
 #   nav: "docs"
 ---
