--- a/_posts/BOJ/2023-05-20-8.md
+++ b/_posts/BOJ/2023-05-20-8.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 11724번: 연결 요소의 개수"
 categories: BOJ
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 그래프 이론, 그래프 탐색]
 # sidebar:
 #   nav: "docs"
 ---
