--- a/_posts/BOJ/2023-05-20-9.md
+++ b/_posts/BOJ/2023-05-20-9.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 1181번: 단어 정렬"
 categories: BOJ
-tags: [BOJ, C++, 정렬]
+tags: [BOJ, C++, 정렬, 문자열]
 # sidebar:
 #   nav: "docs"
 ---
