--- a/_posts/BOJ/2023-05-21-10.md
+++ b/_posts/BOJ/2023-05-21-10.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 1012번: 유기농 배추"
 categories: BOJ
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 그래프 이론, 그래프 탐색]
 # sidebar:
 #   nav: "docs"
 ---
