--- a/_posts/BOJ/2023-05-26-13.md
+++ b/_posts/BOJ/2023-05-26-13.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 2206번: 벽 부수고 이동하기"
 categories: BOJ
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 그래프 이론, 그래프 탐색]
 # sidebar:
 #   nav: "docs"
 ---
