--- a/_posts/BOJ/2023-05-26-14.md
+++ b/_posts/BOJ/2023-05-26-14.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 1991번: 트리 순회"
 categories: BOJ
-tags: [BOJ, C++, 트리]
+tags: [BOJ, C++, 트리, 재귀]
 # sidebar:
 #   nav: "docs"
 ---
