--- a/_posts/BOJ/2023-05-31-16.md
+++ b/_posts/BOJ/2023-05-31-16.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 14502번: 연구소"
 categories: BOJ
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 브루트포스, 그래프 이론, 그래프 탐색]
 # sidebar:
 #   nav: "docs"
 ---
