--- a/_posts/BOJ/2023-06-07-19.md
+++ b/_posts/BOJ/2023-06-07-19.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 1697번: 숨바꼭질"
 categories: [BOJ]
-tags: [BOJ, C++, BFS/DFS]
+tags: [BOJ, C++, BFS/DFS, 그래프 이론, 그래프 탐색]
 # sidebar:
 #   nav: "docs"
 ---
