--- a/_posts/BOJ/2023-06-15-28.md
+++ b/_posts/BOJ/2023-06-15-28.md
@@ -1,7 +1,7 @@
 ---
 title: "[C++] BOJ 7662번: 이중 우선순위 큐"
 categories: BOJ
-tags: [BOJ, C++, 자료구조, multiset]
+tags: [BOJ, C++, 자료구조, Multiset]
 ---
 
 ## 문제
