--- a/_posts/Algorithm/2023-06-16-1.md
+++ b/_posts/Algorithm/2023-06-16-1.md
@@ -8,8 +8,8 @@ tags: [C++, Algorithm]
 
 Union-Find 알고리즘은 두 연산이 존재한다.
 
-1. Union(합침) → 두 집합을 합치는 연산이다.
-2. Find → 어떤 원소가 어떤 집합에 속해 있는지 찾는 연산이다.
+1. Union(합침) → 두 집합을 합치는 연산
+2. Find → 어떤 원소가 어떤 집합에 속해 있는지 찾는 연산
 
 구현에 앞서 알고 넘어가야 이해가 되는 것들이 있다.
 
