--- a/_posts/BOJ/2023-06-24-35.md
+++ b/_posts/BOJ/2023-06-24-35.md
@@ -1,5 +1,5 @@
 ---
-title: "[C++] BOJ 1766번: 문제집"
+title: "[C++] BOJ 14567번: 선수과목(Prerequisite)"
 categories: BOJ
 tags: [BOJ, C++, 위상정렬, 우선순위 큐, 자료구조, 그래프 이론]
 ---
