--- a/_posts/BOJ/2023-07-11-36.md
+++ b/_posts/BOJ/2023-07-11-36.md
@@ -1,91 +1,50 @@
 ---
-title: "[C++] BOJ 4803번: 트리"
+title: "[C++] BOJ 11399번: ATM"
 categories: BOJ
-tags: [BOJ, C++, BFS/DFS, 트리, 그래프 탐색, 그래프 이론, Union-Find, 자료구조]
+tags: [BOJ, C++, 그리디 알고리즘]
 ---
 
 ## 문제
 
-간선이 주어지고 트리의 개수를 출력하는 문제이다. 핵심은 주어진 간선 정보를 통해 트리인지 아닌지를 판별해야한다.
+각 사람이 돈을 인출하는데 필요한 시간의 합의 최솟값 구하기.
 
 ## 접근
 
-우선 Union-Find 알고리즘을 통하여 연결된 간선들을 하나의 집합으로 그룹화시킨다. 그리고 DFS 알고리즘을 통해 트리인지 판별한다. 
+최소가 되는 상황은 시간이 적은 순서대로 사람이 서는 것이다. 여기서 최소 힙을 떠올릴 수 있다.
 
 ## 답안
 
 ```cpp
 #include <iostream>
+#include <queue>
 #include <vector>
 
 using namespace std;
 
-vector<int> parent, visited;
-vector<vector<int>> edges;
-
-int findSet(int x) {
-   if(x == parent[x]) return x;
-   else return parent[x] = findSet(parent[x]);
-}
-
-void unionSet(int x, int y) {
-   x = findSet(x);
-   y = findSet(y);
-   if(x != y) parent[y] = x;
-}
-
-bool dfs(int x, int prev) {
-   visited[x] = true;
-   for(int y : edges[x]) {
-      if(y == prev) continue; 
-      if(visited[y] || dfs(y, x)) return true; 
-   }
-   return false;
-}
-
 int main(void) {
-   ios_base::sync_with_stdio(false);
+   ios_base::sync_with_stdio(false);   
    cin.tie(NULL);
-   cout.tie(NULL);
-   int caseNum = 1;
 
-   while(true) {
-      int N, M;
-      cin >> N >> M;
-      if(N==0 && M==0) break;
-      parent = vector<int>(N + 1);
-      visited = vector<int>(N + 1, false);
-      edges = vector<vector<int>>(N + 1);
-      for(int i=1; i<=N; ++i) parent[i] = i;
-      
-      for(int i=0; i<M; ++i) {
-         int x, y;
-         cin >> x >> y;
-         unionSet(x, y);
-         edges[x].push_back(y);
-         edges[y].push_back(x);
-      }
+   int n;
+   cin >> n;
+   priority_queue<int, vector<int>, greater<int>> pq;
 
-      vector<int> roots(N + 1, 0);
-      for (int i = 1; i <= N; ++i) roots[findSet(i)]++;
-
-      int ans = 0;
-      for (int i = 1; i <= N; ++i) {
-         if (roots[i] > 0 && !dfs(i, 0)) ans++;
-      }  
-
-      cout << "Case " << caseNum << ": ";
-      if(ans == 1) cout << "There is one tree.\n";
-      else if(ans > 1) cout << "A forest of " << ans << " trees.\n";
-      else cout << "No trees.\n";
-      caseNum++;
-
+   for(int i=0; i<n; ++i) {
+      int x;
+      cin >> x;
+      pq.push(x);
    }
 
-   return 0;
+   int ans = 0;
+   int temp = 0;
+   while(!pq.empty()) {
+      int item = pq.top();
+      pq.pop();
+      temp += item;
+      ans += temp;
+   }
+
+   cout << ans << "\n";
+
 }
 ```
-
-### 추가설명
-
-주어진 노드들을 모두 dfs함수에 넣어 확인했었는데 그럴 필요가 없었다. roots 배열을 만들어서 findSet 함수를 통해 루트 노드의 수(집합 원소 수)를 찾고, 같은 그룹 내 루트 노드 외의 다른 노드들은 dfs 검사하지 않아도 된다.
