--- a/_posts/C/C++/2023-07-15-4.md
+++ b/_posts/C/C++/2023-07-15-4.md
@@ -1,134 +1,61 @@
 ---
-title: "[C++ STL] &lt;string&gt;라이브러리"
+title: "[C++ STL] &lt;cmath&gt;라이브러리"
 categories: C/C++
 tags: [C++, STL]
 ---
 
-# string 라이브러리
+# cmath 라이브러리
 
 ## 특성 및 기능
 
-C++에서 string은 문자열을 다루기 위한 STL 라이브러리 중 하나다. 
+C++에서 cmath는 표준라이브러리로 각종 수학함수들을 가지고 있다.
 
-string은 문자열을 저장하는 객체로, 배열과 유사한 방식으로 문자열을 다룰 수 있다.
+### Service Function
 
-### 주요 함수들
-
-- 변수 생성
-
+- ceil(x) : x를 가장 가까운 정수로 올림.
+- floor(x) : x를 가장 가까운 정수로 내림.
+- abs(x) : x의 절댓값을 반환한다.
+- min(x, y) : x, y 중 최솟값을 반환한다.
+- max(x, y) : x, y 중 최댓값을 반환한다.
+    
+    *//min()과 max()는 algorithm 라이브러리에 속한다.*
+    
     ```cpp
-    string str;
+    ceil(3.14);  // 4
+    floor(1.89);  // 1
+    abs(-123);  // 123
+    min(1.1, 1.02);  // 1.02
+    max(1.1, 1.02);  // 1.1
     ```
+    
 
-- 변수에 문자열 대입
+### 지수함수
 
+- pow(a, b) : a의 b제곱값(a^b)을 반환한다.
+- sqrt(x) : x의 제곱근(루트값)을 반환한다.
+- log(x) : x의 자연로그값을 반환한다.
+- log10(x) : x의 상용로그값을 반환한다.
+    
     ```cpp
-    string str = "Hello World!";
+    pow(2, 4);  // 16
+    sqrt(16);  // 4
     ```
-
-- lennth() : 문자열 길이 구하기
-    
-    문자열의 길이를 반환한다.
     
 
+### 삼각함수
+
+- sin(radians) : 입력된 라디안 값의 사인 값을 반환한다.
+- cos(radians) : 입력된 라디안 값의 코사인 값을 반환한다.
+- tan(radians) : 입력된 라디안 값의 탄젠트 값을 반환한다.
+- asin(a) : 입력된 사인 값의 라디안 값을 반환한다.
+- acos(a) : 입력된 코사인 값의 라디안 값을 반환한다.
+- atan(a) : 입력된 탄젠트 값의 라디안 값을 반환한다.
+    
     ```cpp
-    int len = str.length();
+    const double PI = 3.141592;
+    
+    sin(PI * 0.5);  // 1
+    sin(PI * 1.5);  // -1
+    cos(PI);  // -1
+    cos(PI * 2.0);  // 1
     ```
-
-- empty()
-    
-    문자열이 비어있는지 확인한다. 비어있으면 true를 반환한다.
-    
-
-    ```cpp
-    bool empty = str.empty();
-    ```
-
-- 문자열 비교 연산자 제공
-    
-    대소비교는 더 작은 경우 사전순으로 앞에 오는 경우이다.
-    
-
-    ```cpp
-    bool result = (str1 == str2); // 두 문자열이 같은지 비교
-    bool result = (str1 != str2); // 두 문자열이 다른지 비교
-    bool result = (str1 < str2); // str1이 str2보다 작은지 비교
-    bool result = (str1 > str2); // str1이 str2보다 큰지 비교
-    bool result = (str1 <= str2); // str1이 str2보다 작거나 같은지 비교
-    bool result = (str1 >= str2); // str1이 str2보다 크거나 같은지 비교
-    ```
-
-- 문자열 병합 연산자 제공
-
-    ```cpp
-    string str = str1 + str2;
-    str1 += str2;
-    ```
-
-- substr(pos, len) : 문자열 자르기
-    
-    문자열의 pos 위치에서 시작해 len 길이만큼의 문자열을 반환.
-    
-
-    ```cpp
-    string str = "Hello World!";
-    string sub = str.substr(6, 5); // "World" 반환
-    ```
-
-- find(str) : 특정 문자열 찾기
-    
-    문자열에서 str이 처음 나타나는 위치를 반환. 찾지 못한 경우 std::string::npos(특정 상수)를 반환.
-    
-
-    ```cpp
-    int idx = str.find('o'); // 4 반환
-    int idx = str.find("World"); // 6 반환
-    ```
-
-- erase(pos, len) : 문자열에서 특정 문자 제거하기
-    
-    문자열의 pos 위치에서 시작해 len 길이만큼의 문자열을 제거한다.
-    
-
-    ```cpp
-    str.erase(6, 5); // "Hello!" 생성
-    ```
-
-- insert(pos, str) : 문자열에서 특정 문자 삽입하기
-    
-    문자열의 pos 위치에 str 문자열을 삽입한다.
-    
-
-    ```cpp
-    str.insert(5, " World"); // "Hello World!" 생성
-    ```
-
-- replace(pos, len, str) : 문자열의 일부분 대체하기
-    
-    문자열의 pos 위치에서 시작해 len 길이만큼의 문자열을 str 문자열로 대체한다.
-    
-
-    ```cpp
-    str.replace(6, 5, "Earth"); // "Hello Earth!" 생성
-    ```
-
-- 문자열에서 특정 문자를 다른 문자로 대체하기
-
-    ```cpp
-    replace(str.begin(), str.end(), 'o', '0');
-    ```
-
-- 문자열 분할하기
-
-    ```cpp
-    string str = "apple orange banana";
-    vector<string> vec;
-    stringstream ss(str);
-    string token;
-    while (getline(ss, token, ' ')) {
-        vec.push_back(token);
-    }
-    // vec[0] = "apple", vec[1] = "orange", vec[2] = "banana"
-    ```
-
-    str을 ss에 저장. ss를 ‘ ‘를 구분자로 사용하여 ‘ ‘를 읽을 때까지의 문자열을 token에 저장한다.
