--- a/_posts/BOJ/2023-07-17-39.md
+++ b/_posts/BOJ/2023-07-17-39.md
@@ -1,16 +1,31 @@
 ---
-title: "[C++] BOJ 1004번: 어린 왕자"
+title: "[C++] BOJ 2477번: 참외밭"
 categories: BOJ
 tags: [BOJ, C++, 기하학]
 ---
 
 ## 문제
 
-어린 왕자가 거쳐야 할 최소의 행성계 진입/이탈 횟수를 출력해야하는 문제.
+좌표를 통해 면적을 구해야하는 문제.
 
 ## 접근
 
-출발점과 도착점이 속해있는 원의 개수가 정답이 된다. 주의할 점은 출발점과 도착점이 모두 포함된 원이 있다면 정답에서 제외해주어야 한다. 원의 방정식에 출발점과 도착점의 좌표를 대입하고 원의 반지름보다 작거나 같다면 그 행성계에 속해있다는 의미가 된다.
+큰 사각형에서 작은 사각형을 뺀다고 생각한다. 출발점을 임의로 정하고 반시계 방향으로 동쪽은 1, 서쪽은 2, 남쪽은 3, 북쪽은 4로 나타내보면 어떤 규칙이 보인다. 
+
+- ㄱ자 모양에서 방향이 (4, 2), 3, <1, 3>, 1인 경우 :
+    
+    큰 사각형은 (4, 2)에서 구할 수 있고 작은 사각형은 <1, 3> 이다.
+    
+- ㄴ자 모양에서 방향이 1), 4, <2, 4>, 2, (3 인 경우 :
+    
+    큰 사각형은 (3, 1)인데 짤렸고, 작은 사각형은 <2, 4> 이다.
+    
+
+→ 작은 사각형의 경우 3, <1, 3>, 1 또는 4, <2, 4>, 2와 같이 ABAB 형태로 반복되는 것을 알 수 있다.
+
+→ 작은 사각형의 첫 번째 원소(위의 경우 1과 2)의 위치에서 세 칸 건너뛰면 큰 사각형의 첫 번째 원소를 구할 수 있다. 다만 배열의 끝에 다다른경우 처음으로 돌아가야한다.
+
+배열의 크기를 6이 아닌 12로 설정하여 런타임 에러를 방지한다.
 
 ## 답안
 
@@ -24,24 +39,24 @@ int main(void) {
    ios_base::sync_with_stdio(false);
    cin.tie(NULL);
    cout.tie(NULL);
-   int N;
-   cin >> N;
-   for(int i=0; i<N; ++i) {
-      int x1, y1, x2, y2;
-      cin >> x1 >> y1 >> x2 >> y2;
-      int T, ans = 0;
-      cin >> T;
-      for(int i=0; i<T; ++i) {
-         int a, b, r;
-         int x, y;
-         cin >> a >> b >> r;
-         if((x1-a)*(x1-a) + (y1-b)*(y1-b) <= r*r || (x2-a)*(x2-a) + (y2-b)*(y2-b) <= r*r) 
-            ans++;
-         if((x1-a)*(x1-a) + (y1-b)*(y1-b) <= r*r && (x2-a)*(x2-a) + (y2-b)*(y2-b) <= r*r)
-            ans--;
-      }
-      cout << ans << "\n";
+   int unit;
+   cin >> unit;
+   pair<int, int> point[12];
+   for(int i=0; i<6; ++i) {
+      int D, len;
+      cin >> D >> len;
+      point[i] = point[i+6] = {D, len};
    }
+   int minus;
+   int big;
+   for(int i=1; i<8; ++i) {
+      if(point[i].first == point[i+2].first && point[i-1].first == point[i+1].first) {
+         minus = abs(point[i].second * point[i+1].second);
+         big = abs(point[i+3].second * point[i+4].second);
+         break;
+      }
+   }
+   cout << unit * (big - minus) << "\n";
    return 0;
 }
 ```
