--- a/_posts/SpringBoot/2023-08-17-3.md
+++ b/_posts/SpringBoot/2023-08-17-3.md
@@ -224,3 +224,65 @@ if (o instanceof Integer i) {
 ### @Component
 
 @Component 애너테이션이 있는 클래스는 빈으로 등록되며, @Controller, @RestController, @Configuraion, @Repository, @Service 모두 @Component 애너테이션을 가지고 있다. 때에 따라 알맞은 애너테이션을 선택해야 한다.
+
+## 테스트 컨트롤러 살펴보기
+
+스프링 컨테이너가 빈을 관리한다고 했다. 실제로 작성한 TestController.java파일을 살펴보면서 빈이 어떻게 등록되는지 알아보자.
+
+```java
+package me.jaeg00l.springbootdeveloper;
+
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+public class TestController {
+    @GetMapping("/test")
+    public String test() {
+        return "Hello, World!";
+    }
+}
+```
+
+`@RestController`는 라우터 역할을 하는 애너테이션이다. `라우터`란 HTTP 요청과 메서드를 연결하는 장치를 말한다. 이 애너테이션을 통하여 클라이언트의 요청에 맞는 메서드를 실행할 수 있다. 지금의 경우 TestController를 라우터로 지정해 /test라는 GET 요청이 왔을 때 test() 메서드를 실행하도록 구성한 코드이다. 
+
+여기서 @RestController 애너테이션에 `ctrl+클릭` 으로 자세히 들어가보자. 그러면 @RestController를 구현하는 RestController.java파일로 이동한다.
+
+### RestController.java
+
+```java
+... 생략 ...
+
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Controller
+@ResponseBody
+public @interface RestController {
+	@AliasFor(annotation = Controller.class)
+	String value() default "";
+}
+```
+
+코드를 보면 @Controller, @ResponseBody 애너테이션이 함께 있는 것을 볼 수 있다. 이를 통해 @Controller + @ResponseBody 의 결과물이 @RestController 애너테이션임을 알 수 있다.
+
+계속해서 @Controller 애너테이션에 들어가보자.
+
+### Controller.java
+
+```java
+... 생략 ...
+
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Component
+public @interface Controller {
+	@AliasFor(annotation = Component.class)
+	String value() default "";
+}
+```
+
+여기서 @Component 애너테이션을 발견할 수 있다. 이를 통해 @Controller 애너테이션이 @ComponentScan을 통해 빈으로 등록되는 이유를 알 수 있다. 그 이유는 바로 @Controller 애너테이션에서 @Component 애너테이션을 가지고 있기 때문이다. 
+
+그 외에도 @Configuration, @Repository, @Service 애너테이션도 모두 @Component 애너테이션을 가지고 있다. 다만 빈이 무슨 역할을 하는지 명확하게 구분짓기 위해 다른 이름으로 덮어둔 것이다.
