--- a/_posts/SpringBoot/2023-08-18-4.md
+++ b/_posts/SpringBoot/2023-08-18-4.md
@@ -8,7 +8,7 @@ tags: [SpringBoot]
 
 스프링 부트는 다음 그림에서 보듯 각 계층이 양 옆의 계층과 통신하는 구조를 따른다. 여기서 계층이라는 것은 각자의 역할과 책임이 있는 어떤 소프트웨어의 구성 요소를 의미한다. 각 계층은 서로 소통할 수는 있지만 다른 계층에 직접 간섭하거나 영향을 미치지 않는다. 
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/2f3d25c0-ce97-477f-bd28-7bbe9c998141/Untitled.png)
+![Untitled](https://file.notion.so/f/s/2f3d25c0-ce97-477f-bd28-7bbe9c998141/Untitled.png?id=9269abed-4816-4bb8-abf3-750b631d8d1d&table=block&spaceId=9a3b4fbe-650d-42a8-a75d-c7abc58453c5&expirationTimestamp=1692576000000&signature=BykQC86K_yHwxWYHUD1EgYaiPLOEn6L_UzHmBbENY6s&downloadName=Untitled.png)
 
 ### 프레젠테이션 계층
 
