--- a/_posts/SpringBoot/2023-08-19-4.md
+++ b/_posts/SpringBoot/2023-08-19-4.md
@@ -8,7 +8,7 @@ tags: [SpringBoot]
 
 스프링 부트는 다음 그림에서 보듯 각 계층이 양 옆의 계층과 통신하는 구조를 따른다. 여기서 계층이라는 것은 각자의 역할과 책임이 있는 어떤 소프트웨어의 구성 요소를 의미한다. 각 계층은 서로 소통할 수는 있지만 다른 계층에 직접 간섭하거나 영향을 미치지 않는다. 
 
-![Untitled](/_posts/SpringBoot/4/1.png)
+<img data-action="zoom" src='{{ "/_posts/SpringBoot/4/1.png" | relative_url }}' alt='relative'>
 
 ### 프레젠테이션 계층
 
@@ -110,7 +110,8 @@ public class TestController {
 ```
 
 빨간줄이 뜨더라도 무시하고 넘어가자.
-
+1. 프레젠테이션 계층으로, /test인 HTTP GET요청을 받았을 때, getAllMembers 메서드를 실행시키고 그 결과로 반환된 List<Member> 객체를 반환한다.
+2. @Autowired 애너테이션을 통하여 TestService 빈을 TestController에 주입하는 이유는 DI의 원칙에 따른 것이며, TestController는 TestService에 의존하지 않게 되므로 나중 TestService의 구현이 바뀌더라도 TestController 코드는 영향을 받지 않게된다.
 계속해서 비즈니스 계층 코드를 작성하겠다. TestController.java파일과 같은 위치에 TestService.java파일을 생성하고 아래 코드를 따라해준다.
 
 ### TestService.java
