--- a/_posts/SpringBoot/2023-08-19-4.md
+++ b/_posts/SpringBoot/2023-08-19-4.md
@@ -8,7 +8,7 @@ tags: [SpringBoot]
 
 스프링 부트는 다음 그림에서 보듯 각 계층이 양 옆의 계층과 통신하는 구조를 따른다. 여기서 계층이라는 것은 각자의 역할과 책임이 있는 어떤 소프트웨어의 구성 요소를 의미한다. 각 계층은 서로 소통할 수는 있지만 다른 계층에 직접 간섭하거나 영향을 미치지 않는다. 
 
-<img data-action="zoom" src='{{ "/_posts/SpringBoot/4/1.png" | relative_url }}' alt='relative'>
+![img1]({{ "/_posts/SpringBoot/4/1.png" | relative_url }})
 
 ### 프레젠테이션 계층
 
