--- a/_posts/SpringBoot/2023-08-19-4.md
+++ b/_posts/SpringBoot/2023-08-19-4.md
@@ -232,3 +232,10 @@ spring:
 우리가 포스트맨에서 데이터를 보기까지는 다음과 같은 과정을 거친다. 계층과 파일을 맞춰서 과정을 한 번 확인해보자. 앞으로 이런 과정으로 스프링이 동작한다는 감을 잡기 좋을 것이다.
 
 HTTP 요청(url:/test) → 프레젠테이션 계층(TestController.java) ↔  비즈니스 계층(TestService.java) ↔ 퍼시스턴스 계층(MemberRepository.java) ↔ 데이터베이스
+
+### 스프링의 요청, 응답 과정
+1. 포스트맨에서 HTTP 요청을 톰캣에게 보낸다.
+2. 스프링부트의 디스패처 서블릿이라는 녀석이 URL을 분석하고, 이 요청을 처리할 수 있는 컨트롤러를 찾는다. TestController에게 /test GET요청을 전달한다.
+3. /test GET 요청을 처리할 수 있는 getAllMembers() 메서드와 이 요청이 매칭된다. 그리고 getAllMembers() 메서드에서는 비즈니스 계층과 퍼시스턴스 계층을 통하면서 필요한 데이터를 가져온다.
+4. 뷰 리졸버는 템플릿 엔진을 사용해 HTML 문서를 만들거나 JSON, XML 등의 데이터를 생성한다.
+5. members를 return하고 그 데이터를 포스트맨에서 볼 수 있게 된다.
